--- a/index.html
+++ b/index.html
@@ -39,11 +39,11 @@
                                                 
                                                 <div id="flush-collapseOne" class="accordion-collapse collapse"
                                                     data-bs-parent="#accordionFlushExample">
-                                                    <div class="accordion-body blackBg"><a
+                                                    <div class="accordion-body blackBg mobileNavCoverJ"><a
                                                             class="nav-link navLinksJ yellowJ"
                                                             href="./pages/Menu.html">Food</a></div>
                                                     <div class="accordion-body blackBg"><a
-                                                            class="nav-link navLinksJ yellowJ"
+                                                            class="nav-link navLinksJ yellowJ mobileNavCoverJ"
                                                             href="./pages/Drinks.html">Drinks</a></div>
                                                 </div>
                                             </div>
@@ -168,9 +168,9 @@
             </div>
         </div>
         <div class="row evenJ homePageMargin disappearJ">
-            <div class="col">
-                <div class="card cardJ" style="width: 280px;">
-                    <img src="./assets/banhMiCard1.png" class="card-img-top" alt="Picture of Grilled PorkBanh Mi">
+            <div class="col centerJ">
+                <div class="card cardJ">
+                    <img class="img-fluid" src="./assets/banhMiCard1.png" class="card-img-top" alt="Picture of Grilled PorkBanh Mi">
                     <div class="card-body">
                         <p class="card-text sansCollectionJ sandwichJ2 sandwichTxtJ">#1 Favorite <span
                                 class="sandwichJ">Grilled Pork</span> $5.79</p>
@@ -184,9 +184,9 @@
                     </div>
                 </div>
             </div>
-            <div class="col">
-                <div class="card cardJ" style="width: 280px;">
-                    <img src="./assets/banhMiCard2.png" class="card-img-top" alt="Picture of Vegetarian Banh Mi">
+            <div class="col centerJ">
+                <div class="card cardJ">
+                    <img class="img-fluid" src="./assets/banhMiCard2.png" class="card-img-top" alt="Picture of Vegetarian Banh Mi">
                     <div class="card-body">
                         <p class="card-text sansCollectionJ sandwichJ2 sandwichTxtJ">#1 Diet Friendly <span
                                 class="sandwichJ">Vegetarian</span> $5.79</p>
@@ -200,9 +200,9 @@
                     </div>
                 </div>
             </div>
-            <div class="col">
-                <div class="card cardJ" style="width: 280px;">
-                    <img src="./assets/BanhMiCard3.png" class="card-img-top" alt="Picture of BBQ Pork Banh Mi">
+            <div class="col centerJ">
+                <div class="card cardJ">
+                    <img class="img-fluid" src="./assets/BanhMiCard3.png" class="card-img-top" alt="Picture of BBQ Pork Banh Mi">
                     <div class="card-body">
                         <p class="card-text sansCollectionJ sandwichJ2 sandwichTxtJ">Top Seller <span
                                 class="sandwichJ">BBQ Pork</span> $5.79</p>
@@ -216,9 +216,9 @@
                     </div>
                 </div>
             </div>
-            <div class="col">
-                <div class="card cardJ" style="width: 280px;">
-                    <img src="./assets/banhMiCard4.png" class="card-img-top" alt="Picture of Ham and Cheese Croissant">
+            <div class="col centerJ">
+                <div class="card cardJ">
+                    <img class="img-fluid" src="./assets/banhMiCard4.png" class="card-img-top" alt="Picture of Ham and Cheese Croissant">
                     <div class="card-body">
                         <p class="card-text sansCollectionJ sandwichJ2 sandwichTxtJ">#1 Croissant <span
                                 class="sandwichJ">H & C Croissant</span> $6.49</p>
@@ -232,9 +232,9 @@
                     </div>
                 </div>
             </div>
-            <div class="col">
-                <div class="card cardJ" style="width: 280px;">
-                    <img src="./assets/banhMiCard5.png" class="card-img-top" alt="Picture of Ham and Cheese Baguette">
+            <div class="col centerJ">
+                <div class="card cardJ ">
+                    <img class="img-fluid" src="./assets/banhMiCard5.png" class="card-img-top" alt="Picture of Ham and Cheese Baguette">
                     <div class="card-body">
                         <p class="card-text sansCollectionJ sandwichJ2 sandwichTxtJ">#1 Baguette <span
                                 class="sandwichJ">H & C Baguette</span> $6.19</p>
@@ -273,8 +273,8 @@
             </div>
         </div>
         <div class="row evenJ homePageMargin disappearJ">
-            <div class="col">
-                <div class="card cardJ" style="width: 280px;">
+            <div class="col centerJ">
+                <div class="card cardJ" >
                     <img src="./assets/drinkCard1.png" class="card-img-top" alt="...">
                     <div class="card-body">
                         <p class="card-text sansCollectionJ sandwichJ2 taroTxtJ">#1 Favorite <span
@@ -289,8 +289,8 @@
                     </div>
                 </div>
             </div>
-            <div class="col">
-                <div class="card cardJ" style="width: 280px;">
+            <div class="col centerJ">
+                <div class="card cardJ" >
                     <img src="./assets/drinkCard2.png" class="card-img-top" alt="...">
                     <div class="card-body">
                         <p class="card-text sansCollectionJ sandwichJ2 greenTeaTxtJ">"The Go To Drink" <span
@@ -305,8 +305,8 @@
                     </div>
                 </div>
             </div>
-            <div class="col">
-                <div class="card cardJ" style="width: 280px;">
+            <div class="col centerJ">
+                <div class="card cardJ" >
                     <img src="./assets/drinkCard3.png" class="card-img-top" alt="...">
                     <div class="card-body">
                         <p class="card-text sansCollectionJ sandwichJ2 thaiTeaTxtJ">Top Seller <span
@@ -321,8 +321,8 @@
                     </div>
                 </div>
             </div>
-            <div class="col">
-                <div class="card cardJ" style="width: 280px;">
+            <div class="col centerJ">
+                <div class="card cardJ" >
                     <img src="./assets/drinkCard4.png" class="card-img-top" alt="...">
                     <div class="card-body">
                         <p class="card-text sansCollectionJ sandwichJ2 avocadoTxtJ">#1 Recommended <span
@@ -337,8 +337,8 @@
                     </div>
                 </div>
             </div>
-            <div class="col">
-                <div class="card cardJ" style="width: 280px;">
+            <div class="col centerJ">
+                <div class="card cardJ">
                     <img src="./assets/drinkCard5.png" class="card-img-top" alt="...">
                     <div class="card-body">
                         <p class="card-text sansCollectionJ sandwichJ2 greenTeaTxtJ">#2 Recommended <span
