--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
         <div class="row">
             <nav class="navbar navbar-expand-lg">
                 <div class="container-fluid">
-                    <a class="navbar-brand yellowJ" href="./index.html"> <img class="mobileBSLogo appearJ" src="../assets/bestSandwich logo.png" alt="Picture of Logo"></a>
+                    <a class="navbar-brand yellowJ" href="./index.html"> <img class="mobileBSLogo appearJ"
+                            src="../assets/bestSandwich logo.png" alt="Picture of Logo"></a>
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                         data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false"
                         aria-label="Toggle navigation">
@@ -30,13 +31,13 @@
                                         <div class="accordion accordion-flush menuNavJ" id="accordionFlushExample">
                                             <div class="accordion-item"
                                                 style=" background-color: rgba(255, 255, 255, 0); outline: none;">
-                                                
-                                                    <button class="btn navLinksJ nav-link" type="button"
-                                                        data-bs-toggle="collapse" data-bs-target="#flush-collapseOne"
-                                                        aria-expanded="false" aria-controls="flush-collapseOne">
-                                                        <p class="yellowJ pB0" style="font-weight: 400;">Menu</p>
-                                                    </button>
-                                                
+
+                                                <button class="btn navLinksJ nav-link" type="button"
+                                                    data-bs-toggle="collapse" data-bs-target="#flush-collapseOne"
+                                                    aria-expanded="false" aria-controls="flush-collapseOne">
+                                                    <p class="yellowJ pB0" style="font-weight: 400;">Menu</p>
+                                                </button>
+
                                                 <div id="flush-collapseOne" class="accordion-collapse collapse"
                                                     data-bs-parent="#accordionFlushExample">
                                                     <div class="accordion-body blackBg"><a
@@ -90,10 +91,12 @@
         </div>
     </div>
 
-    <h1 class="absoluteJ whiteJ sloganJ sansCollectionJ disappearJ" style="width: 1040px;">"A banh mi a day keeps the hunger away"
+    <h1 class="absoluteJ whiteJ sloganJ sansCollectionJ disappearJ" style="width: 1040px;">"A banh mi a day keeps the
+        hunger away"
     </h1>
 
-    <a class="absoluteJ viewMenuJ" href="#menu"><button class="btn btn-primary viewMenuBtnJ sansCollectionJ">View Menu</button></a>
+    <a class="absoluteJ viewMenuJ" href="#menu"><button class="btn btn-primary viewMenuBtnJ sansCollectionJ">View
+            Menu</button></a>
 
     <div class="container-fluid bgWhiteJ" style="padding-top: 50px; padding-bottom: 100px;">
         <div class="row disappearJ">
@@ -113,7 +116,8 @@
 
             </div>
             <div class="col-4">
-                <div class="row centerJ"><img class="infoLogoSizeJ2" src="./assets/location.png" alt="Picture of location pin">
+                <div class="row centerJ"><img class="infoLogoSizeJ2" src="./assets/location.png"
+                        alt="Picture of location pin">
                 </div>
                 <div class="row txtCenterJ abrilFatfaceJ" style="padding-top: 30px">
                     <h3 class="infoTxtSizeJ">LOCATION</h3>
@@ -125,7 +129,8 @@
 
                 <div class="row" style="padding-top: 75px;">
                     <a class="centerJ" style="text-decoration: none;" href="./pages/ContactUs.html">
-                        <button class="btn btn-primary sansCollectionJ" style="width: 270px; height: 100px">Learn More</button>
+                        <button class="btn btn-primary sansCollectionJ" style="width: 270px; height: 100px">Learn
+                            More</button>
                     </a>
                 </div>
 
@@ -155,7 +160,8 @@
         <div class="row homePageMargin">
             <div class="col-4">
                 <div class="row" style="margin-top: 5px">
-                    <h1 class="whiteJ abrilFatfaceJ disappearJ" style="width: 300px; line-height: 57px;">Popular Sandwiches</h1>
+                    <h1 class="whiteJ abrilFatfaceJ disappearJ" style="width: 300px; line-height: 57px;">Popular
+                        Sandwiches</h1>
                 </div>
 
 
@@ -485,94 +491,94 @@
             </div>
         </div>
 
-            <hr class="yellowJ hrLineJ hrMargin">
+        <hr class="yellowJ hrLineJ hrMargin">
 
-    <div class="container-fluid footerPaddingJ disappearJ">
-        <div class="row" style="padding-top: 45px; padding-bottom: 20px;">
-            <div class="col-4" style="padding-left: 3%;">
-                <div class="row yellowJ abrilFatfaceJ">
-                    <h2 class="footerFontSize3">Best Sandwiches</h2>
-                </div>
-                <div class="row yellowJ abrilFatfaceJ">
-                    <h2 class="footerFontSize3">& Smoothies</h2>
-                </div>
-            </div>
-            <div class="col" style="padding-left: 2%;">
-                <div class="row">
-                    <div class="col">
-                        <div class="row sansCollectionJ">
-                            <p class="yellowJ abrilFatfaceJ footerFontSize2">HOURS</p>
-                            <p class="yellowJ footerFontSize">Mon & Tue : 9 am - 5 pm</p>
-                            <p class="yellowJ footerFontSize">CLOSED WEDNESDAY</p>
-                            <p class="yellowJ footerFontSize">Thu - Sun : 9 am - 5pm</p>
-                        </div>
+        <div class="container-fluid footerPaddingJ disappearJ">
+            <div class="row" style="padding-top: 45px; padding-bottom: 20px;">
+                <div class="col-4" style="padding-left: 3%;">
+                    <div class="row yellowJ abrilFatfaceJ">
+                        <h2 class="footerFontSize3">Best Sandwiches</h2>
                     </div>
-
-                    <div class="col">
-                        <div class="row sansCollectionJ">
-                            <p class="yellowJ abrilFatfaceJ footerFontSize2">CONTACT US</p>
-                            <p class="yellowJ footerFontSize">
-                                <img src="../assets/phone symbol.png" alt="">
-                                <a class="yellowJ" href="" style="padding-left: 15px;">(209) 475-0652</a>
-                            </p>
-                            <p class="yellowJ footerFontSize">3330 E Hammer Ln Ste</p>
-                            <p class="yellowJ footerFontSize">C Stockton, CA 95212</p>
-                        </div>
+                    <div class="row yellowJ abrilFatfaceJ">
+                        <h2 class="footerFontSize3">& Smoothies</h2>
                     </div>
-
-                    <div class="col">
-                        <div class="row">
-                            <p class="yellowJ abrilFatfaceJ footerFontSize2">LINKS</p>
+                </div>
+                <div class="col" style="padding-left: 2%;">
+                    <div class="row">
+                        <div class="col">
+                            <div class="row sansCollectionJ">
+                                <p class="yellowJ abrilFatfaceJ footerFontSize2">HOURS</p>
+                                <p class="yellowJ footerFontSize">Mon & Tue : 9 am - 5 pm</p>
+                                <p class="yellowJ footerFontSize">CLOSED WEDNESDAY</p>
+                                <p class="yellowJ footerFontSize">Thu - Sun : 9 am - 5pm</p>
+                            </div>
                         </div>
-                        <div class="row">
-                            <a class="footerIconsJ" href="https://m.facebook.com/profile.php?id=111693338885516">
-                                <img class="img-fluid" src="../assets/FACEBOOK.png" alt="">
-                            </a>
-                            <a class="footerIconsJ"
-                                href="https://www.yelp.com/biz/best-sandwiches-and-smoothies-stockton">
-                                <img class="img-fluid" src="../assets/icons8-yelp-100.png" alt="">
-                            </a>
-                            <a class="footerIconsJ" href="../index.html">
-                                <img class="img-fluid" src="../assets/bestSandwich logo.png" alt="">
-                            </a>
+
+                        <div class="col">
+                            <div class="row sansCollectionJ">
+                                <p class="yellowJ abrilFatfaceJ footerFontSize2">CONTACT US</p>
+                                <p class="yellowJ footerFontSize">
+                                    <img src="../assets/phone symbol.png" alt="">
+                                    <a class="yellowJ" href="" style="padding-left: 15px;">(209) 475-0652</a>
+                                </p>
+                                <p class="yellowJ footerFontSize">3330 E Hammer Ln Ste</p>
+                                <p class="yellowJ footerFontSize">C Stockton, CA 95212</p>
+                            </div>
+                        </div>
+
+                        <div class="col">
+                            <div class="row">
+                                <p class="yellowJ abrilFatfaceJ footerFontSize2">LINKS</p>
+                            </div>
+                            <div class="row">
+                                <a class="footerIconsJ" href="https://m.facebook.com/profile.php?id=111693338885516">
+                                    <img class="img-fluid" src="../assets/FACEBOOK.png" alt="">
+                                </a>
+                                <a class="footerIconsJ"
+                                    href="https://www.yelp.com/biz/best-sandwiches-and-smoothies-stockton">
+                                    <img class="img-fluid" src="../assets/icons8-yelp-100.png" alt="">
+                                </a>
+                                <a class="footerIconsJ" href="../index.html">
+                                    <img class="img-fluid" src="../assets/bestSandwich logo.png" alt="">
+                                </a>
+                            </div>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
-    </div>
 
-    <div class="container-fluid appearJ" style="padding-left: 20px; padding-right: 20px;">
-        <div class="row">
-            <div class="col">
-                <p class="yellowJ footerFontSize" style="margin-bottom: 5px;">
-                    <img class="phoneImageJ" src="../assets/phone symbol.png" alt="">
-                    <a class="yellowJ" href="" style="padding-left: 15px">(209) 475-0652</a>
-                </p>
-                <p class="yellowJ footerFontSize" style="width: 115px;">
-                    3330 E Hammer Ln Ste C Stockton, CA 95212
-                </p>
-            </div>
-            <div class="col">
-                <div class="row rightJ">
-                    <a class="footerIconsMobileJ" href="https://m.facebook.com/profile.php?id=111693338885516">
-                        <img class="img-fluid" src="../assets/FACEBOOK.png" alt="">
-                    </a>
-                    <a class="footerIconsMobileJ"
-                        href="https://www.yelp.com/biz/best-sandwiches-and-smoothies-stockton">
-                        <img class="img-fluid" src="../assets/icons8-yelp-100.png" alt="">
-                    </a>
-                    <a class="footerIconsMobileJ" href="../index.html">
-                        <img class="img-fluid" src="../assets/bestSandwich logo.png" alt="">
-                    </a>
+        <div class="container-fluid appearJ" style="padding-left: 20px; padding-right: 20px;">
+            <div class="row">
+                <div class="col">
+                    <p class="yellowJ footerFontSize" style="margin-bottom: 5px;">
+                        <img class="phoneImageJ" src="../assets/phone symbol.png" alt="">
+                        <a class="yellowJ" href="" style="padding-left: 15px">(209) 475-0652</a>
+                    </p>
+                    <p class="yellowJ footerFontSize" style="width: 115px;">
+                        3330 E Hammer Ln Ste C Stockton, CA 95212
+                    </p>
                 </div>
-                <div class="row">
-                    <p class="bSMobileFooterJ yellowJ" style="padding-top: 8px; text-align: end;">Best Sandwiches &
-                        Smoothies</p>
+                <div class="col">
+                    <div class="row rightJ">
+                        <a class="footerIconsMobileJ" href="https://m.facebook.com/profile.php?id=111693338885516">
+                            <img class="img-fluid" src="../assets/FACEBOOK.png" alt="">
+                        </a>
+                        <a class="footerIconsMobileJ"
+                            href="https://www.yelp.com/biz/best-sandwiches-and-smoothies-stockton">
+                            <img class="img-fluid" src="../assets/icons8-yelp-100.png" alt="">
+                        </a>
+                        <a class="footerIconsMobileJ" href="../index.html">
+                            <img class="img-fluid" src="../assets/bestSandwich logo.png" alt="">
+                        </a>
+                    </div>
+                    <div class="row">
+                        <p class="bSMobileFooterJ yellowJ" style="padding-top: 8px; text-align: end;">Best Sandwiches &
+                            Smoothies</p>
+                    </div>
                 </div>
             </div>
         </div>
-    </div>
 
 
 
