--- a/pages/Drinks.html
+++ b/pages/Drinks.html
@@ -17,39 +17,52 @@
     <div class="row">
       <nav class="navbar navbar-expand-lg">
         <div class="container-fluid">
-          <a class="navbar-brand yellowJ" href="#"></a>
+          <a class="navbar-brand yellowJ" href="../index.html"> <img class="mobileBSLogo appearJ"
+              src="../assets/bestSandwich logo.png" alt="Picture of Logo"></a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup"
             aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
+            <span class="navbar-toggler-icon" style="width: 45px;"></span>
           </button>
           <div class="collapse navbar-collapse centerJ" id="navbarNavAltMarkup">
             <div class="" style="width: 100%;">
               <div class="row">
-
                 <div class="col centerJ">
-                  <div class="row evenJ" style="width: 700px; padding-top: 40px;">
-                    <a class="nav-link yellowJ navLinksJ txtCenterJ" style="width: 75px;"
-                      href="../pages/Menu.html">Menu</a>
-                    <a class="nav-link yellowJ navLinksJ txtCenterJ" style="width: 140px;"
-                      href="../pages/ContactUs.html">Contact Us</a>
-                    <a class="nav-link yellowJ navLinksJ txtCenterJ" style="width: 125px;" aria-current="page"
-                      href="../pages/AboutUs.html">About
+                  <div class="row evenJ navRowJ">
+                    <div class="accordion accordion-flush menuNavJ" id="accordionFlushExample">
+                      <div class="accordion-item" style=" background-color: rgba(255, 255, 255, 0); outline: none;">
+
+                        <button class="btn navLinksJ nav-link" type="button" data-bs-toggle="collapse"
+                          data-bs-target="#flush-collapseOne" aria-expanded="false" aria-controls="flush-collapseOne">
+                          <p class="yellowJ pB0" style="font-weight: 400;">Menu</p>
+                        </button>
+
+                        <div id="flush-collapseOne" class="accordion-collapse collapse"
+                          data-bs-parent="#accordionFlushExample">
+                          <div class="accordion-body blackBg"><a class="nav-link navLinksJ yellowJ"
+                              href="../pages/Menu.html">Food</a></div>
+                          <div class="accordion-body blackBg"><a class="nav-link navLinksJ yellowJ"
+                              href="../pages/Drinks.html">Drinks</a></div>
+                        </div>
+                      </div>
+                    </div>
+                    <a class="nav-link yellowJ navLinksJ txtCenterJ contactUsNavJ"
+                      href="../pages/ContactUs.html">Contact
                       Us</a>
-                    <a class="nav-link yellowJ navLinksJ txtCenterJ" style="width: 120px;"
-                      href="../pages/BanhMi.html">Banh Mi?</a>
+                    <a class="nav-link yellowJ navLinksJ txtCenterJ aboutNavJ" aria-current="page"
+                      href="../pages/AboutUs.html">About Us</a>
+                    <a class="nav-link yellowJ navLinksJ txtCenterJ banhMiNavJ" href="../pages/BanhMi.html">Banh Mi?</a>
                   </div>
                 </div>
 
-                <div class="col-1 centerJ">
-                  <a href="./index.html"><img class="logoSizeJ" src="../assets/bestSandwich logo.png" alt=""></a>
+                <div class="col-1 centerJ disappearJ">
+                  <a href="../index.html"><img class="logoSizeJ" src="../assets/bestSandwich logo.png"
+                      alt="Picture of Logo"></a>
                 </div>
-                <div class="col yugiJ alignCenterJ">
+                <div class="col yugiJ alignCenterJ disappearJ">
                   <h1 style="width: 100%" class="txtCenterJ titleFontJ yellowJ">Best Sandwiches &
                     Smothies</h1>
                 </div>
-
               </div>
-
             </div>
           </div>
         </div>
@@ -64,58 +77,88 @@
       </div>
     </div>
     <div class="d-none d-lg-block">
-      <div class="row bgWhite">
+      <div class="row disappearJ bgWhite">
         <div class="col topFive">
-          <div class="card " style="width: 12rem; border: 0px;">
-            <img src="../assssssssssssssssssssssssets/Taro.png" class="card-img-top" alt="...">
+          <div class="card cardJ" style="width: 280px; border: 0;">
+            <img src="../assets/drinkCard1.png" class="card-img-top" alt="...">
             <div class="card-body">
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
-                content.</p>
+              <p class="card-text sansCollectionJ topFiveTxt2">#1 Favorite
+              <div class="topFiveTxt">Tangy Taro</div> $5.89</p>
+              <div class="row starRowJ">
+                <img class="star2J" src="../assets/Star.png" alt="">
+                <img class="star2J" src="../assets/Star.png" alt="">
+                <img class="star2J" src="../assets/Star.png" alt="">
+                <img class="star2J" src="../assets/Star.png" alt="">
+                <img class="star2J" src="../assets/Star.png" alt="">
+              </div>
             </div>
           </div>
         </div>
-
         <div class="col topFive">
-          <div class="card" style="width: 12rem; border: 0px;">
-            <img src="../assssssssssssssssssssssssets/GreenTea.png" class="card-img-top" alt="...">
+          <div class="card cardJ" style="width: 280px; border: 0;">
+            <img src="../assets/drinkCard2.png" class="card-img-top" alt="...">
             <div class="card-body">
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
-                content.</p>
+              <p class="card-text sansCollectionJ topFiveTxt2 ">"The Go To Drink"
+              <div class="topFiveTxt">Green Tea Gangbusters</div> $5.89</p>
+              <div class="row starRowJ">
+                <img class="star2J" src="../assets/Star.png" alt="">
+                <img class="star2J" src="../assets/Star.png" alt="">
+                <img class="star2J" src="../assets/Star.png" alt="">
+                <img class="star2J" src="../assets/Star.png" alt="">
+                <img class="star2J" src="../assets/Star.png" alt="">
+              </div>
             </div>
           </div>
         </div>
-
         <div class="col topFive">
-          <div class="card" style="width: 12rem; border: 0px;">
-            <img src="../assssssssssssssssssssssssets/ThaiTea.png" class="card-img-top" alt="...">
+          <div class="card cardJ" style="width: 280px; border: 0;">
+            <img src="../assets/drinkCard3.png" class="card-img-top" alt="...">
             <div class="card-body">
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
-                content.</p>
+              <p class="card-text sansCollectionJ topFiveTxt2">Top Seller
+              <div class="topFiveTxt">Iced Thai Tea</div> $5.69</p>
+              <div class="row starRowJ">
+                <img class="star2J" src="../assets/Star.png" alt="">
+                <img class="star2J" src="../assets/Star.png" alt="">
+                <img class="star2J" src="../assets/Star.png" alt="">
+                <img class="star2J" src="../assets/Star.png" alt="">
+                <img class="star2J" src="../assets/Star.png" alt="">
+              </div>
             </div>
           </div>
         </div>
-
         <div class="col topFive">
-          <div class="card" style="width: 12rem; border: 0px;">
-            <img src="../assssssssssssssssssssssssets/Avocado.png" class="card-img-top" alt="...">
+          <div class="card cardJ" style="width: 280px; border: 0;">
+            <img src="../assets/drinkCard4.png" class="card-img-top" alt="...">
             <div class="card-body">
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
-                content.</p>
+              <p class="card-text sansCollectionJ topFiveTxt2">#1 Recommended
+              <div class="topFiveTxt">Appealing Avocado</div> $5.89</p>
+              <div class="row starRowJ">
+                <img class="star2J" src="../assets/Star.png" alt="">
+                <img class="star2J" src="../assets/Star.png" alt="">
+                <img class="star2J" src="../assets/Star.png" alt="">
+                <img class="star2J" src="../assets/Star.png" alt="">
+                <img class="star2J" src="../assets/Star.png" alt="">
+              </div>
             </div>
           </div>
         </div>
-
         <div class="col topFive">
-          <div class="card" style="width: 12rem; border: 0px;">
-            <img src="../assssssssssssssssssssssssets/HoneyDew.png" class="card-img-top" alt="...">
+          <div class="card cardJ" style="width: 280px; border: 0;">
+            <img src="../assets/drinkCard5.png" class="card-img-top" alt="...">
             <div class="card-body">
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
-                content.</p>
+              <p class="card-text sansCollectionJ topFiveTxt2">#2 Recommended
+              <div class="topFiveTxt"> HoneyDew Milk Tea</div> $5.69</p>
+              <div class="row starRowJ">
+                <img class="star2J" src="../assets/Star.png" alt="">
+                <img class="star2J" src="../assets/Star.png" alt="">
+                <img class="star2J" src="../assets/Star.png" alt="">
+                <img class="star2J" src="../assets/Star.png" alt="">
+                <img class="star2J" src="../assets/Star.png" alt="">
+              </div>
             </div>
           </div>
         </div>
       </div>
-
     </div>
     <div class="row d-sm-block d-md-none">
       <div class="col g-0">
@@ -147,7 +190,7 @@
       </div>
       <div class="col drinkPos g-0 d-none d-lg-block">
         <div style="padding-top: 110px;">
-          <img class="drinkImage" src="../assssssssssssssssssssssssets/boba.jpg"
+          <img class="menuImage" src="../assssssssssssssssssssssssets/boba.jpg"
             style="float: right;width:652px;height:482px; object-fit: cover;" alt="">
         </div>
 
@@ -169,7 +212,7 @@
       </div>
       <div class="col drinkPos g-0 d-none d-lg-block">
         <div style="padding-top: 92px;">
-          <img class="drinkImage" src="../assssssssssssssssssssssssets/drink2.jpg"
+          <img class="menuImage" src="../assssssssssssssssssssssssets/drink2.jpg"
             style="float: right;width:652px;height:378px; object-fit: cover" alt="">
         </div>
       </div>
@@ -191,7 +234,7 @@
 
       <div class="col drinkPos g-0 d-none d-lg-block">
         <div style="padding-top: 116px;">
-          <img class="drinkImage" src="../assssssssssssssssssssssssets/drink3.jpg"
+          <img class="menuImage" src="../assssssssssssssssssssssssets/drink3.jpg"
             style="float: right;width:652px;height:361px; object-fit: cover" alt="">
         </div>
       </div>
@@ -215,7 +258,7 @@
       </div>
       <div class="col drinkPos g-0 d-none d-lg-block">
         <div style="padding-top: 112px;">
-          <img class="drinkImage" src="../assssssssssssssssssssssssets/drink4.jpg"
+          <img class="menuImage" src="../assssssssssssssssssssssssets/drink4.jpg"
             style="float: right;width:652px;height:545px; object-fit: cover" alt="">
         </div>
       </div>
@@ -239,7 +282,7 @@
       </div>
       <div class="col drinkPos g-0 d-none d-lg-block">
         <div style="padding-top: 76px;">
-          <img class="drinkImage" src="../assssssssssssssssssssssssets/drink5.png"
+          <img class="menuImage" src="../assssssssssssssssssssssssets/drink5.png"
             style="float: right;width:652px;height:532px; object-fit: cover; object-position: 0px -210px ;" alt="">
         </div>
       </div>
@@ -248,7 +291,7 @@
     <!-- Yelp Review -->
 
 
-    <div id="carouselExample" class="carousel slide bgWhiteJ d-none d-lg-block">
+    <div id="carouselExample" class="carousel slide bgWhite d-none d-lg-block">
       <div class="carousel-inner">
         <div class="carousel-item active">
           <div class="row centerJ">
@@ -367,9 +410,9 @@
 
   <!-- Footer -->
 
-  <hr class="yellowJ hrLineJ mt-4">
+  <hr class="yellowJ hrLineJ hrMargin">
 
-  <div class="container-fluid footerPaddingJ">
+  <div class="container-fluid footerPaddingJ disappearJ">
     <div class="row" style="padding-top: 45px; padding-bottom: 20px;">
       <div class="col-4" style="padding-left: 3%;">
         <div class="row yellowJ abrilFatfaceJ">
@@ -382,20 +425,23 @@
       <div class="col" style="padding-left: 2%;">
         <div class="row">
           <div class="col">
-            <div class="row">
+            <div class="row sansCollectionJ">
               <p class="yellowJ abrilFatfaceJ footerFontSize2">HOURS</p>
-              <p class="yellowJ footerFontSize ">Mon & Tue : 9 am - 5 pm</p>
+              <p class="yellowJ footerFontSize">Mon & Tue : 9 am - 5 pm</p>
               <p class="yellowJ footerFontSize">CLOSED WEDNESDAY</p>
               <p class="yellowJ footerFontSize">Thu - Sun : 9 am - 5pm</p>
             </div>
           </div>
 
           <div class="col">
-            <div class="row">
+            <div class="row sansCollectionJ">
               <p class="yellowJ abrilFatfaceJ footerFontSize2">CONTACT US</p>
-              <p class="yellowJ footerFontSize">Mon & Tue : 9 am - 5 pm</p>
-              <p class="yellowJ footerFontSize">CLOSED WEDNESDAY</p>
-              <p class="yellowJ footerFontSize">Thu - Sun : 9 am - 5pm</p>
+              <p class="yellowJ footerFontSize">
+                <img src="../assets/phone symbol.png" alt="">
+                <a class="yellowJ" href="" style="padding-left: 15px;">(209) 475-0652</a>
+              </p>
+              <p class="yellowJ footerFontSize">3330 E Hammer Ln Ste</p>
+              <p class="yellowJ footerFontSize">C Stockton, CA 95212</p>
             </div>
           </div>
 
@@ -404,13 +450,48 @@
               <p class="yellowJ abrilFatfaceJ footerFontSize2">LINKS</p>
             </div>
             <div class="row">
-              <a class="footerIconsJ" href="https://m.facebook.com/profile.php?id=111693338885516"><img
-                  class="img-fluid" src="../assets/FACEBOOK.png" alt=""></a>
-              <a class="footerIconsJ" href="https://m.facebook.com/profile.php?id=111693338885516"><img
-                  class="img-fluid" src="../assets/icons8-yelp-100.png" alt=""></a>
-              <a class="footerIconsJ"><img class="img-fluid" src="../assets/bestSandwich logo.png" alt=""></a>
+              <a class="footerIconsJ" href="https://m.facebook.com/profile.php?id=111693338885516">
+                <img class="img-fluid" src="../assets/FACEBOOK.png" alt="">
+              </a>
+              <a class="footerIconsJ" href="https://www.yelp.com/biz/best-sandwiches-and-smoothies-stockton">
+                <img class="img-fluid" src="../assets/icons8-yelp-100.png" alt="">
+              </a>
+              <a class="footerIconsJ" href="../index.html">
+                <img class="img-fluid" src="../assets/bestSandwich logo.png" alt="">
+              </a>
             </div>
           </div>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <div class="container-fluid appearJ" style="padding-left: 20px; padding-right: 20px;">
+    <div class="row">
+      <div class="col">
+        <p class="yellowJ footerFontSize" style="margin-bottom: 5px;">
+          <img class="phoneImageJ" src="../assets/phone symbol.png" alt="">
+          <a class="yellowJ" href="" style="padding-left: 15px">(209) 475-0652</a>
+        </p>
+        <p class="yellowJ footerFontSize" style="width: 115px;">
+          3330 E Hammer Ln Ste C Stockton, CA 95212
+        </p>
+      </div>
+      <div class="col">
+        <div class="row rightJ">
+          <a class="footerIconsMobileJ" href="https://m.facebook.com/profile.php?id=111693338885516">
+            <img class="img-fluid" src="../assets/FACEBOOK.png" alt="">
+          </a>
+          <a class="footerIconsMobileJ" href="https://www.yelp.com/biz/best-sandwiches-and-smoothies-stockton">
+            <img class="img-fluid" src="../assets/icons8-yelp-100.png" alt="">
+          </a>
+          <a class="footerIconsMobileJ" href="../index.html">
+            <img class="img-fluid" src="../assets/bestSandwich logo.png" alt="">
+          </a>
+        </div>
+        <div class="row">
+          <p class="bSMobileFooterJ yellowJ" style="padding-top: 8px; text-align: end;">Best Sandwiches &
+            Smoothies</p>
         </div>
       </div>
     </div>
